--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "olivaw": "^2.0.3",
     "react": "16.3.1",
     "react-native": "0.54.4",
+    "react-native-masked-text": "^1.6.5",
     "react-native-optimized-flatlist": "^1.0.4"
   },
   "devDependencies": {
